# cabot-alert-email

./: .gitignore  CHANGELOG.md  README.md  setup.cfg  setup.py
cabot_alert_email/: __init__.py  models.py  plugin.py  test_email.py
cabot_alert_email/migrations/: 0001_initial.py
cabot_alert_email/tests/: test_email.py
