[metadata]
description-file = README.md

[isort]
known_first_party = cabot
multi_line_output = 5
known_django = django
sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER
skip_glob =	**/migrations/*

[flake8]
exclude = .venv,venv,.tox,dist,doc,build,*.egg,docs,setup.py,*/migrations/
ignore = E501
